Fixed navbar wrap spacing

--- a/styles.css
+++ b/styles.css
@@ -56,8 +56,8 @@ a {
 }
 
 .navbar {
-    padding-top: 5px;
-    padding-bottom: 15px;
+    min-height: 99px;
+
     padding-left: 50px;
     padding-right: 50px;
 
@@ -78,7 +78,8 @@ a {
     flex-wrap: wrap;
   align-items: center;
   justify-content: right;
-  gap: 30px;
+  gap: 0 20px;
+
 }
 
 .pages {
@@ -86,7 +87,7 @@ a {
     flex-wrap: wrap;
   align-items: center;
   justify-content: right;
-  gap: 40px;
+  gap: 20px;
 }
 
 .icons {
@@ -94,7 +95,7 @@ a {
     flex-wrap: wrap;
   align-items: center;
   justify-content: right;
-  gap: 20px;
+  gap: 10px;
 }
 
 /** ------------------------------------ **/
@@ -236,7 +237,7 @@ a.content:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: start;
     flex-wrap: nowrap; /** breaks if too many elements **/
 
     height: 100%;
